--- a/Bootstrap/Bootstrap/Views/Shared/_Layout.cshtml
+++ b/Bootstrap/Bootstrap/Views/Shared/_Layout.cshtml
@@ -1,20 +1,16 @@
 ﻿<!DOCTYPE html>
 <html>
-@*<head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  
-</head>*@
-<body>
-    
+<head>
+    <meta charset="utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
+</head>
+<body> 
     <div class="container body-content">
         @RenderBody()
-        <hr />
+        @*<hr />
         <footer>
             <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
-        </footer>
+        </footer>*@
     </div>
-
-
 </body>
 </html>
